# PianoClient

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: a  run  server.cpp
cxxmidi/cxxmidi/guts/: player_base.hpp  simulator.hpp
cxxmidi/cxxmidi/output/: default.hpp
cxxmidi/cxxmidi/output/linux/: alsa.hpp
cxxmidi/cxxmidi/player/: player_async.hpp  player_sync.hpp
